k8s/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: assignment
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
