k8s/ingress.yml
# Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: two-tier-app-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 135.234.217.158.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: two-tier-app-service
                port:
                  number: 80
